TestResults changes